add API for testing simulation